--- a/_posts/2019-02-19-二维数组中的查找.markdown
+++ b/_posts/2019-02-19-二维数组中的查找.markdown
@@ -4,7 +4,7 @@ title:      "二维数组中的查找"
 subtitle:   "剑指offer"
 date:       2019-02-19
 author:     "chl"
-header-img: "img/post-bg-unix-linux.jpg"
+header-img: "img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
