--- a/_posts/2019-03-03-圆圈中最后剩下的数字.markdown
+++ b/_posts/2019-03-03-圆圈中最后剩下的数字.markdown
@@ -4,7 +4,7 @@ title:      "圆圈中最后剩下的数字"
 subtitle:   "剑指offer"
 date:       2019-03-03
 author:     "chl"
-header-img: "img/post-bg-unix-linux.jpg"
+header-img: "img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
