--- a/_posts/2019-03-04-丑数.markdown
+++ b/_posts/2019-03-04-丑数.markdown
@@ -4,7 +4,7 @@ title:      "丑数"
 subtitle:   "剑指offer"
 date:       2019-03-04
 author:     "chl"
-header-img: "img/post-bg-unix-linux.jpg"
+header-img: "img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
