--- a/_posts/2019-03-04-删除链表中重复的节点.markdown
+++ b/_posts/2019-03-04-删除链表中重复的节点.markdown
@@ -4,7 +4,7 @@ title:      "删除链表中重复的节点"
 subtitle:   "剑指offer"
 date:       2019-03-04
 author:     "chl"
-header-img: "img/post-bg-js-version.jpg"
+header-img: "img/jzoffer.jpg"
 tags:
     - 算法
     - 数据结构
