--- a/_posts/2019-07-09-字符串的排列.markdown
+++ b/_posts/2019-07-09-字符串的排列.markdown
@@ -4,7 +4,7 @@ title:      "字符串的排列"
 subtitle:   "剑指offer"
 date:       2019-03-04
 author:     "chl"
-header-img: "img/post-bg-js-version.jpg"
+header-img: "img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
