--- a/_posts/2019-02-15-从1~n整数中1出现的次数.markdown
+++ b/_posts/2019-02-15-从1~n整数中1出现的次数.markdown
@@ -1,8 +1,8 @@
 ﻿---
 layout:     post
-title:      "从1~n整数中1出现的次数"
+title:      "最小的k个数"
 subtitle:   "剑指offer"
-date:       2019-02-15
+date:       2019-02-13
 author:     "chl"
 header-img: "img/img/jzoffer.jpg"
 tags:
@@ -12,62 +12,77 @@ tags:
 --- 
 
 ## 题目描述
-求出1~13的整数中1出现的次数,并算出100~1300的整数中1出现的次数；1~13中包含1的数字有1、10、11、12、13因此共出现6次。求出任意非负整数区间中1出现的次数（从1 到 n 中1出现的次数）。
+给定一个乱序的整型数组，求这个数组中最小的k个数
 
 
-## 解法
-解法一：首先想到的是遍历1~n，然后对n除以10，求模，对1进行累加；这样的话每个数字n的求1复杂度为O(logN)；整个时间复杂度为O(n*logn);
+## 解法一
+快排序思想，随机取一个数值，然后按大于该数或小于该数分为两部分，然后返回该数在数组中的位置index，判断是否等于k-1；如果等于k-1，则说明此时所求的最小的k个数位于数组前k个；
+否则根据k的位置继续寻找index=k-1;时间为O(n)，但是会改变原数组；
 
-解法二：利用1出现的规律和递归的方法；假如随机给出一个数字4311，先看312~4311这个区间1的个数。首先计算首位为1时的次数，即1000~1999，此时可以
-先得到首位1出现的此时为10^3；接着求首位后面的位数1出现的次数，固定首位，后面的每一位都可能使0~9之间的10个数字，所以选其中某一位为1，另外两位则为有10^2可能，所以后面位数1出现的次数为3*10^2;此时在算上首位可能出现的数字，这里使1~4，所以一共就有10^3+4*3*10^2;
-之所以要分隔为312~4311，是因为0~312可以利用同样的方法递归获得；
-
-## 代码
+## 解法一代码
 ```
- int NumberOf1Between1AndN_Solution(int n)
-    {
-        if(n<=0){
-            return 0;
+      vector<int> output;
+        int start = 0;
+        int end = input.size() - 1;
+        int index = Partition(&input, start, end);
+        while (index != k - 1) {
+            if (index<=k - 1) {
+                start = index + 1;
+                index = Partition(&input, start, end);
+            }
+            else {
+                end = index - 1;
+                index = Partition(&input, start, end);
+            }
         }
-        char strN[50];
-        //利用字符串方便计算
-        sprintf(strN,"%d",n);
-        return NumberOf1(strN);
+        for (int i = 0; i < k; i++) {
+            output.push_back(input[i]);
+        }
+        return output;
     }
-    int NumberOf1(const char *strN){
-        if(!strN || *strN < '0' || *strN > '9' || *strN == '\0'){
-            return 0;
+    
+    int Partition(vector<int>* input, int start, int end) {
+        int pkey = (*input)[start];
+        while (start < end) {
+            while (start < end && (*input)[end] >= pkey) end--;
+            (*input)[start] = (*input)[end];
+            while (start < end && (*input)[start] <= pkey) start++;
+            (*input)[end] = (*input)[start];
         }
-        int first = *strN-'0';
-        unsigned int length = static_cast<unsigned int>(strlen(strN));
-        if(length == 1 && first==0){
-            return 0;
-        }
-        if(length == 1 && first > 0 ){
-            return 1;
-        }
-        //先求出首位为1时1出现在首位的次数；
-        int numFirstDigit = 0;
-        if(first>1){
-            numFirstDigit = PowerBase(length-1);
-        }
-        if(first == 1){
-            numFirstDigit = atoi(strN+1)+1;
-        }
-        //算出首位之后的1出现的次数
-        int numOtherDigits = first*(length-1)*PowerBase(length-2);
-        //递归求其余的1的次数
-        int numRecursive = NumberOf1(strN+1);
-        return numFirstDigit+numOtherDigits+numRecursive;
-    }
-    int PowerBase(int n ){
-        int result = 1;
-        for(int i = 0 ;i<n;i++){
-            result*=10;
-        }
-        return result;
+        (*input)[start] = pkey;
+        return start;
     }
 ```
+## 解法二
+使用堆，遍历数组，设置一个大小为k的容器；初始将数组前k个数字放入容器中，然后后续的数组跟容器中的最大值比较，若小于，则删除最大值放入该值；所以问题在于寻找容器的最大值；遍历就需要O(k)，所以总的是O(kN)，若k为n，则最差为O(N^2);使用堆排序，时间复杂度为O(logk),总的为O(nlogk);使用STL容器set或multiset，会自动对容器内数据排序，时间复杂度为O(logn);
 
+## 解法二代码
+```
+  vector<int> GetLeastNumbers_Solution(vector<int> input, int k) {
+        vector<int> output;
+        if(k<=0 || input.size()==0 || k>input.size()){
+            return output;
+        }
+        int is = input.size();
+        multiset<int> s;
+        for(int i = 0 ; i < is ; i++ ){
+            if(s.size()<k){
+                s.insert(input[i]);
+                continue;
+            }
+            set<int>::reverse_iterator riter;
+            riter = s.rbegin();
+            if((*riter)>input[i]){
+                s.erase(*riter);
+                s.insert(input[i]);
+            }
+        }
+        set<int>::iterator iter;
+        for(iter = s.begin();iter!=s.end();iter++){
+            output.push_back(*iter);
+        }
+        return output;
+    }
+```
 ## 总结
-其实并不难，就是对n进行递归统计，先求出首位1的情况，然后再排列组合求出当前位数后面的1的次数，在递归求下一位的次数；
+解法一速度快，但是会动用到原数组；解法二速度虽然没一的快，但是适合于海量数据，因为可以将大量n放到磁盘中，而将容器中的数据放入到内存；
