--- a/_posts/leetcode/2019-08-08-5. Longest Palindromic Substring.md
+++ b/_posts/leetcode/2019-08-08-5. Longest Palindromic Substring.md
@@ -1,7 +1,7 @@
 ﻿---
 layout:     post
 title:      "5. Longest Palindromic Substring"
-subtitle:   "剑指offer"
+subtitle:   "leetcode"
 date:       2019-08-08
 author:     "chl"
 header-img: "img/img/jzoffer.jpg"
