--- a/_posts/2019-02-17-滑动窗口的最大值.markdown
+++ b/_posts/2019-02-17-滑动窗口的最大值.markdown
@@ -1,10 +1,10 @@
----
+﻿---
 layout:     post
 title:      "滑动窗口的最大值"
 subtitle:   "剑指offer"
 date:       2019-02-17
 author:     "chl"
-header-img: "img/img/jzoffer.jpg"
+header-img: "/img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
