--- a/_posts/2019-02-15-数据流中的中位数.markdown
+++ b/_posts/2019-02-15-数据流中的中位数.markdown
@@ -4,7 +4,7 @@ title:      "数据流中的中位数"
 subtitle:   "剑指offer"
 date:       2019-02-15
 author:     "chl"
-header-img: "img/img/jzoffer.jpg"
+header-img: "/img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
