--- a/_posts/2019-02-18-数组中重复的数字.markdown
+++ b/_posts/2019-02-18-数组中重复的数字.markdown
@@ -1,10 +1,10 @@
----
+﻿---
 layout:     post
 title:      "数组中重复的数字"
 subtitle:   "剑指offer"
 date:       2019-02-18
 author:     "chl"
-header-img: "img/img/jzoffer.jpg"
+header-img: "/img/jzoffer.jpg"
 tags:
     - 剑指offer
     - 算法
