--- a/_posts/leetcode/2019-05-15-5. Longest Palindromic Substring.md
+++ b/_posts/leetcode/2019-05-15-5. Longest Palindromic Substring.md
@@ -2,9 +2,9 @@
 layout:     post
 title:      "5. Longest Palindromic Substring"
 subtitle:   "leetcode"
-date:       2019-08-08
+date:      2019-05-15
 author:     "chl"
-header-img: "/img/jzoffer.jpg"
+header-img: "/img/leetcode.jpg"
 tags:
     - leetcode
     - 算法
