--- a/_posts/leetcode/2019-05-08-75. Sort Colors.md
+++ b/_posts/leetcode/2019-05-08-75. Sort Colors.md
@@ -1,3 +1,14 @@
+---
+layout:     post
+title:      "73. Set Matrix Zeroes"
+subtitle:   "leetcode"
+date:       2019-05-08
+author:     "chl"
+header-img: "/img/leetcode.jpg"
+tags:
+    - leetcode
+--- 
+
 ### 题目
 Given an array with n objects colored red, white or blue, sort them in-place so that objects of the same color are adjacent, with the colors in the order red, white and blue.
 
