--- a/_posts/leetcode/2019-05-08-73. Set Matrix Zeroes.md
+++ b/_posts/leetcode/2019-05-08-73. Set Matrix Zeroes.md
@@ -1,3 +1,14 @@
+---
+layout:     post
+title:      "33. Search in Rotated Sorted Array"
+subtitle:   "leetcode"
+date:       2019-05-08
+author:     "chl"
+header-img: "/img/leetcode.jpg"
+tags:
+    - leetcode
+--- 
+
 ### 题目
 Given a m x n matrix, if an element is 0, set its entire row and column to 0. Do it in-place.
 ### 题意
