--- a/_posts/k8s/2019-07-22-k8s网络原理与flannel网络原理.md
+++ b/_posts/k8s/2019-07-22-k8s网络原理与flannel网络原理.md
@@ -4,7 +4,7 @@ title:      "k8s网络原理与flannel网络原理"
 subtitle:   "k8s学习记录"
 date:       2019-07-22
 author:     "CHuiL"
-header-img: "img/post-bg-2015.jpg"
+header-img: "img/k8s-bg.png"
 tags:
     - k8s
 ---
