--- a/_posts/k8s/2019-08-13-k8s kubelet介绍.md
+++ b/_posts/k8s/2019-08-13-k8s kubelet介绍.md
@@ -1,4 +1,4 @@
----
+﻿---
 layout:     post
 title:      "k8s kubelet介绍"
 subtitle:   "k8s学习记录"
@@ -11,9 +11,13 @@ tags:
 
 # Kubelete
 在k8s集群中，每个节点都会启动一个kubelet服务进程。该进程用于处理Master节点下发到本节点的任务，管理pod以及pod中的容器。每个kubelet进程会在初始时通过API Server注册节点信息，并定期向Master节点汇报节点资源的使用情况，API Server收到节点信息后会存储在etcd中。
+有三种方式将pod清单提供给kubelet
+- 文件：通过命令行传入的文件路径。kubelet 将定期监听该路径下的文件以获得更新。监视周期默认为 20 秒，可通过参数进行配置。
+- HTTP 端点：HTTP 端点以命令行参数传入。每 20 秒检查一次该端点（该时间间隔也是可以通过命令行配置的）。
+- HTTP 服务：kubelet 还可以监听 HTTP 并响应简单的 API（当前未指定）以提交新的清单。
 
 ## Pod管理
-当我们在master节点上进行操作，新建了一个pod时（一般都是通过rc这类控制器来管理pod），然后通过调度来决定运行在哪个node上。而kubelete会一直监听etcd，所有针对pod的操作都会被kubelet监听到。如果发现有绑定到本节点的pod时，会将获取到的信息同步到本地缓存中，并按照pod清单的要求创建pod。
+当我们在master节点上进行操作，新建了一个pod时（一般都是通过rc这类控制器来管理pod），然后通过调度来决定运行在哪个node上。而kubelet会一直监听etcd，所有针对pod的操作都会被kubelet监听到。如果发现有绑定到本节点的pod时，会将获取到的信息同步到本地缓存中，并按照pod清单的要求创建pod。
 
 ### 创建和修改Pod
 1. 为该pod创建一个数据目录
