--- a/_posts/docker/2019-04-23-理解docker镜像原理.md
+++ b/_posts/docker/2019-04-23-理解docker镜像原理.md
@@ -1,6 +1,6 @@
----
+﻿---
 layout:     post
-title:      "k8s kubelet介绍"
+title:      "2019-04-23-理解docker镜像原理"
 subtitle:   "k8s学习记录"
 date:       2019-04-23
 author:     "CHuiL"
@@ -11,7 +11,7 @@ tags:
 
 ### docker镜像与镜像层
 要理解镜像，首先需要知道镜像是由一层一层镜像层堆叠起来的，而我们往往看的镜像（比如通过docker images)一般指的是镜像的顶层
-![image](482767F88ED541CFBE7D4BC734C8A3BE)
+![image](/chuil/img/docker/image_layer.jpg)
 
 
 
