--- a/_posts/docker/2019-08-15-docker 4种网络模型.md
+++ b/_posts/docker/2019-08-15-docker 4种网络模型.md
@@ -30,3 +30,7 @@ tags:
 ## container模式
 这种模式下，关联的容器之间处在同一个网络空间和网络栈，换句话说，可以在一个容器中直接使用localhos+端口访问另一个容器上的服务进程。不过他们与宿主机仍然是隔离的。如下图  
 ![image](/chuil/img/docker/08-15-3.png)
+
+
+## 参考
+[Docker网络模型对比](https://www.jianshu.com/p/421c9181456e)
