Update and rename 2019-08-15-docker 4种网络模型 - 副本.md to 2019-08-15-docker 4种网络模型 .md

--- a/_posts/docker/2019-08-15-docker 4种网络模型 .md
+++ b/_posts/docker/2019-08-15-docker 4种网络模型 .md
@@ -1,6 +1,6 @@
-﻿---
+---
 layout:     post
-title:      "2019-04-23-理解docker镜像原理"
+title:      "docker的4种网络模型理"
 subtitle:   "docker学习记录"
 date:       2019-08-15
 author:     "CHuiL"
