--- a/_posts/elk/2019-08-20-es集群系统负载飙升并伴随频繁的io操作.md
+++ b/_posts/elk/2019-08-20-es集群系统负载飙升并伴随频繁的io操作.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "集群系统负载飙升，大量得io操作"
+title:      "es集群系统负载飙升并伴随频繁的io操作"
 subtitle:   "elk实践记录"
 date:       2019-08-20
 author:     "CHuiL"
