--- a/_posts/go/2019-05-12-go调度器.md
+++ b/_posts/go/2019-05-12-go调度器.md
@@ -35,7 +35,7 @@ tags:
 >  Goroutine调度器和OS调度器是通过M结合起来的，每个M都代表了1个内核线程，OS调度器负责把内核线程分配到CPU的核上执行。
 
 #### 调度器的生命周期
-![image](3716EF3D6CA8469CA6FB05DF39377969)
+![image](/chuil/img/go/19-08-24-10.png)
 
 #### 创建G的情况
 - 创建G时，会优先加入到本地P队列;
