--- a/_posts/go/2019-04-11-go二级线程模型实现.md
+++ b/_posts/go/2019-04-11-go二级线程模型实现.md
@@ -15,13 +15,13 @@ tags:
 - P: Processor，表示逻辑处理器， 对G来说，P相当于CPU核，G只有绑定到P(在P的local runq中)才能被调度。对M来说，P提供了相关的执行环境(Context)，如内存分配状态(mcache)，任务队列(G)等，P的数量决定了系统内最大可并行的G的数量（前提：物理CPU核数 >= P的数量），P的数量由用户设置的GOMAXPROCS决定，但是不论GOMAXPROCS设置为多大，P的数量最大为256。
 - M: Machine，OS线程抽象，代表着真正执行计算的资源，在绑定有效的P后，进入schedule循环；而schedule循环的机制大致是从Global队列、P的Local队列以及wait队列中获取G，切换到G的执行栈上并执行G的函数，调用goexit做清理工作并回到M，如此反复。M并不保留G状态，这是G可以跨M调度的基础，M的数量是不定的，由Go Runtime调整，为了防止创建过多OS线程导致系统调度不过来，目前默认最大限制为10000个。
 
-![image](/chui/img/go/19-08-24-7.png)
+![image](/chuil/img/go/19-08-24-7.png)
 
 ### 两级线程模型
 用户级线程模型：用户自定义调度算法，系统无法感知用户级别的线程
 内核级系统模型：线程交由系统内核调度，能够利用多核实现并行
 两级线程模型：多对多的线程实现，即创建多个内核级线程，然后通过这些内核级线程对应用级线程进程调度。  
-![image](/chui/img/go/19-08-24-8.png)
+![image](/chuil/img/go/19-08-24-8.png)
 
 ### 调度
 有 4 种事件会引起 Go 程序触发调度。这不意味着每次事件都会触发调度。Go 调度器会自己找合适的机会。
@@ -30,7 +30,7 @@ tags:
 - 系统调用
 - 同步互斥操作，也就是 Lock()，Unlock() 等
 
-![image](/chui/img/go/19-08-24-9.png)
+![image](/chuil/img/go/19-08-24-9.png)
 
 你可以认为 Goroutine 是应用级别的线程，它在很多方面跟系统的线程是相似的。就像系统线程不断的在一个 core 上做上下文切换一样，Goroutine 不断的在 M 上做上下文切换。
 
