--- a/_posts/redis/2019-03-25-redis中的数据结构—跳跃表.md
+++ b/_posts/redis/2019-03-25-redis中的数据结构—跳跃表.md
@@ -1,10 +1,10 @@
 ---
 layout:     post
-title:      "redis中的跳跃表"
+title:      "redis中的数据结构—跳跃表"
 subtitle:   ""
 date:       2019-03-25
 author:     "CHuiL"
-header-img: "img/algorithm-bg.png"
+header-img: "img/redis-bg.png"
 tags:
     - 算法
     - redis
