--- a/_posts/docker/2019-04-17-Docker容器原理的基础知识.md
+++ b/_posts/docker/2019-04-17-Docker容器原理的基础知识.md
@@ -4,7 +4,7 @@ title:      "Docker容器原理的基础知识"
 subtitle:   "docker学习记录"
 date:       2019-04-16
 author:     "CHuiL"
-header-img: "img/k8s-bg.png"
+header-img: "img/docker-pg.png"
 tags:
     - docker
 ---
