--- a/_posts/docker/2019-04-25-docker多阶段构建.md
+++ b/_posts/docker/2019-04-25-docker多阶段构建.md
@@ -4,7 +4,7 @@ title:      "docker多阶段构建"
 subtitle:   "docker学习记录"
 date:       2019-04-25
 author:     "CHuiL"
-header-img: "img/k8s-bg.png"
+header-img: "img/docker-pg.png"
 tags:
     - docker
 ---
