--- a/_posts/docker/2019-08-15-docker 4种网络模型 .md
+++ b/_posts/docker/2019-08-15-docker 4种网络模型 .md
@@ -4,7 +4,7 @@ title:      "docker的4种网络模型理"
 subtitle:   "docker学习记录"
 date:       2019-08-15
 author:     "CHuiL"
-header-img: "img/k8s-bg.png"
+header-img: "img/docker-pg.png"
 tags:
     - docker
 ---
