--- a/_posts/redis/2019-03-19-redis中的数据结构—SDS简单动态字符串.md
+++ b/_posts/redis/2019-03-19-redis中的数据结构—SDS简单动态字符串.md
@@ -4,7 +4,7 @@ title:      "redis中的数据结构—SDS简单动态字符串"
 subtitle:   ""
 date:       2019-03-19
 author:     "CHuiL"
-header-img: "img/algorithm-bg.png"
+header-img: "img/redis-bg.png"
 tags:
     - redis
 ---
