--- a/_posts/redis/2019-03-19-redis中的数据结构—压缩列表.md
+++ b/_posts/redis/2019-03-19-redis中的数据结构—压缩列表.md
@@ -4,9 +4,8 @@ title:      "redis中的数据结构—压缩列表"
 subtitle:   ""
 date:       2019-03-19
 author:     "CHuiL"
-header-img: "img/algorithm-bg.png"
+header-img: "img/redis-bg.png"
 tags:
-    - 算法
     - redis
 ---
 
