--- a/_posts/算法/2019-04-05-从2-3树到红黑树.md
+++ b/_posts/算法/2019-04-05-从2-3树到红黑树.md
@@ -1,8 +1,8 @@
 ﻿---
 layout:     post
-title:      "旅行商问题"
+title:      "从2-3树到红黑树"
 subtitle:   ""
-date:       2019-07-29
+date:       2019-04-05
 author:     "CHuiL"
 header-img: "img/algorithm-bg.png"
 tags:
