--- a/_posts/docker/2019-04-23-理解docker镜像原理.md
+++ b/_posts/docker/2019-04-23-理解docker镜像原理.md
@@ -4,7 +4,7 @@ title:      "理解docker镜像原理"
 subtitle:   "docker学习记录"
 date:       2019-04-23
 author:     "CHuiL"
-header-img: "img/k8s-bg.png"
+header-img: "img/docker-pg.png"
 tags:
     - docker
 ---
