--- a/_posts/算法/2019-08-18-01背包问题.md
+++ b/_posts/算法/2019-08-18-01背包问题.md
@@ -90,3 +90,38 @@ func Knapsack10(elemt []Element, C int)int{
 	return DP[C]
 }
 ```
+
+
+## leetcode上的类似题目
+#### 416. Partition Equal Subset Sum
+大意就是给定一个整型数组，求该数组能否分为两个子数组，要求他们的和相等；  
+[这道题之前就已经做过了](https://for2b.github.io/chuil/2019/06/27/416.-Partition-Equal-Subset-Sum/)，但是并没有做出来，也是看到别人的解法，看了好久勉强了别人的做法。  
+现在重新学了01背包问题，再去看这道题发现就是01背包的问题。。
+
+这里转换一下，把每个值看成重量，问题就变成，能否从这堆物品中找出重量刚好为总重量的一半的物品； 
+对于每一个物品，都有那或者不拿的选择，设有dp[i][w]表示共有i件物品，是否能凑齐重量刚好为w；那么dp[i][w] = dp[i-1][w]||dp[i-1][w-nums[i]]  
+不拿就看后面的能否凑够w，拿了就看后面的能否凑够w-nums[i]；是不是就是01背包问题，构造相同的二维表，只是不在是表示价值，而单纯只是一个true false而已；
+这样去想这道题就容易很多，之前借鉴的解法看了半天才理解，理解之后就马上忘记了。
+```
+func canPartition(nums []int) bool {
+    sum:=0
+    for _,n:=range nums{
+        sum+=n
+    }
+    if sum&1==1{
+        return false
+    }
+    
+    target := sum>>1
+    
+    dp := make([]bool,target+1)
+    dp[0]=true
+    for _,num:=range nums{
+        for i:=target;i>=num;i--{
+            dp[i] = dp[i]||dp[i-num]
+        }
+    }
+    
+    return dp[target]
+    
+```
