--- a/_posts/算法/2019-08-18-01背包问题.md
+++ b/_posts/算法/2019-08-18-01背包问题.md
@@ -125,3 +125,53 @@ func canPartition(nums []int) bool {
     return dp[target]
     
 ```
+
+#### 474. Ones and Zeroes  
+In the computer world, use restricted resource you have to generate maximum benefit is what we always want to pursue.
+
+For now, suppose you are a dominator of m 0s and n 1s respectively. On the other hand, there is an array with strings consisting of only 0s and 1s.
+
+Now your task is to find the maximum number of strings that you can form with given m 0s and n 1s. Each 0 and 1 can be used at most once.    
+
+大意就是，m，n分别代表0 和 1的个数，在给你个字符串数组，每个字符由01构成，问从这个数组中找到能拼出存在于数组中的字符串的最大数量。每个 0 和 1 至多被使用一次。
+
+例子
+```
+Input: Array = {"10", "0001", "111001", "1", "0"}, m = 5, n = 3
+Output: 4
+
+Explanation: This are totally 4 strings can be formed by the using of 5 0s and 3 1s, which are “10,”0001”,”1”,”0”
+```
+  
+
+这道题也是01背包问题，只是价值重量转化为0 1 的个数而已,同样可以得到类似的状态转化方程
+`dp[i][m][n] = max(dp[i-1][m][n],dp[i-1][m-Mi][n-Ni]+1`   
+在熟悉了上面的解法，这个方程也不难理解了，就是在对第i个字符时，有选择拿去它或者不拿取它，不拿去则最大数量由后面字符的决定，拿去了则将M，N的个数对应的减少，总量+1；同样是构造二维表  
+这里的二维表中，可以看成i,(m,n)的形式；
+
+代码如下
+
+```
+func findMaxForm(strs []string, m int, n int) int {
+	dp := make([][]int,m+1)
+	for i,_:=range dp{
+		dp[i] = make([]int,n+1)
+	}
+
+	for _,s := range strs{
+		count0 := strings.Count(s, "0")
+		count1 := len(s) - count0
+
+		if count0>m || count1 > n{
+			continue
+		}
+
+		for M:=m;M>=count0;M--{
+			for N:=n;N>=count1;N--{
+				dp[M][N] = max(dp[M][N],dp[M-count0][N-count1]+1)
+			}
+		}
+	}
+	return dp[m][n]
+}
+```
