--- a/_posts/算法/2019-08-18-01背包问题.md
+++ b/_posts/算法/2019-08-18-01背包问题.md
@@ -345,3 +345,70 @@ func coinChange(coins []int, amount int) int {
 
 
 ```
+
+
+#### 494. Target Sum
+You are given a list of non-negative integers, a1, a2, ..., an, and a target, S. Now you have 2 symbols + and -. For each integer, you should choose one from + and - as its new symbol.
+
+Find out how many ways to assign symbols to make sum of integers equal to target S.
+
+大意就是给你一个正整数数组，对每一个值可以选择+，-号，求选择+-号后所求得的和为目标S的方法数
+
+```
+Input: nums is [1, 1, 1, 1, 1], S is 3. 
+Output: 5
+Explanation: 
+
+-1+1+1+1+1 = 3
++1-1+1+1+1 = 3
++1+1-1+1+1 = 3
++1+1+1-1+1 = 3
++1+1+1+1-1 = 3
+
+There are 5 ways to assign symbols to make the sum of nums be target 3.
+```
+
+这道题其实也不难看出本质还是01背包问题，对每个值都有+-号的选择；其实按着这种思路可以写出下面的公式
+```
+dp[i][s] = dp[i-1][s-1]+dp[i-1][s+1]
+```
+上面的公式也好理解，如果我们给当前数值i选择+号，那么就求后面的元素和为s-1，如果选择-号，后面的元素和为s+1；这条公式起初看上去好像没什么问题（至少一开始真没看出问题 orz...），结果马上写完一跑就发现不对劲，这样写的话还得处理负数。
+比如当我现在在i=2，即当前有两个值1,1可以选择，那么dp[2][0] = dp[i][-1]+dp[i][2] 这就有点难搞了。  
+
+这里其实还可以有另外一个很巧妙的方式
+
+```
+假设有
+    S1+S2=SUM;
+    S1-S2=tar;
+则有
+    S1=(SUM+tar)/2 
+```
+所以问题就转化为了求数组和为S1的方法数，且SUM和tar都是已知值；
+
+代码如下
+```
+func findTargetSumWays(nums []int, S int) int {
+    sum := 0
+    for _,num := range nums{
+        sum+=num
+    }
+    
+    if (sum+S)&1==1 || sum<S {
+        return 0
+    }
+    
+    tar := (sum+S)/2
+    dp := make([]int,tar+1)
+
+    //这里为dp[0][0]=1；元素值为0，目标值为0，那么方法数为1，不然后面的会无法叠加
+    dp[0] = 1 
+    for _,num := range nums{
+        for i:=tar;i>=num;i--{
+            dp[i] = dp[i]+dp[i-num]   
+        }
+    }
+    
+    return dp[tar]
+}
+```
