--- a/_posts/docker/2019-08-15-docker 4种网络模型 .md
+++ b/_posts/docker/2019-08-15-docker 4种网络模型 .md
@@ -10,9 +10,9 @@ tags:
 ---
 
 ## host模式
-与宿主机共享同一个网络命名命名空间，容器的IP地址即为宿主机的ip地址，容器可以和宿主机一样，使用宿主机的网卡和外界通信，端口自然也可以舒勇宿主机的端口，无需额外进行NAT转换。  
+与宿主机共享同一个网络命名命名空间，容器的IP地址即为宿主机的ip地址，容器可以和宿主机一样，使用宿主机的网卡和外界通信，端口自然也可以使用宿主机的端口，无需额外进行NAT转换。  
 不在需要经过bridge的转发或者数据包的拆封，性能上有很大优势。  
-容器不在拥有隔离，独立的网络栈。容器会与宿主机竞争网络战的使用，并且容器的崩溃可能导致宿主机的崩溃。  
+容器不在拥有隔离，独立的网络栈。容器会与宿主机竞争网络栈的使用，并且容器的崩溃可能导致宿主机的崩溃。  
 容器内部将不在拥有所有的端口资源，所以一些常见的服务端口可能已经被宿主机占用。
 
 ![image](/chuil/img/docker/08-15-1.png) 
