--- a/_posts/k8s/2019-08-12-k8s service介绍.md
+++ b/_posts/k8s/2019-08-12-k8s service介绍.md
@@ -111,8 +111,8 @@ service/es-svc            NodePort    10.100.79.190    <none>        9200:30200/
 
 
 ### Headless Services
-Headless Service也是一种service，只是这种service没有ClusterIp，即可指定`ClusterIp`的值为`Node`来创建Headless Service。对于这类service，kube-proxy不会处理他们，而且不会进行负责均衡和路由。  
-对于一把的service，使用dns查询服务的名字，会返回service的地址。但是查询headless service的名字，返回的是backend pod的所有地址。
+Headless Service也是一种service，只是这种service没有ClusterIp，即可指定`ClusterIp`的值为`None`来创建Headless Service。对于这类service，kube-proxy不会处理他们，而且不会进行负载均衡和路由。  
+对于一般的service，使用dns查询服务的名字，会返回service的地址。但是查询headless service的名字，返回的是backend pod的所有地址。
 
 所以client可以自己决定使用哪个pod，即自定义负载均衡。
 
