--- a/_posts/k8s/2019-07-22-k8s网络原理与flannel网络原理.md
+++ b/_posts/k8s/2019-07-22-k8s网络原理与flannel网络原理.md
@@ -119,28 +119,28 @@ service/es-svc            NodePort    10.100.79.190    <none>        9200:30200/
 
 #### cni与flannel
 ##### Container Network Interface 
-最早是由CoreOS发起的==容器网络规范==，是Kubernetes网络插件的基础。其基本思想为：Container Runtime在创建容器时，先创建好network namespace，然后调用CNI插件为这个netns配置网络，其后再启动容器内的进程。  
+最早是由CoreOS发起的`容器网络规范`，是Kubernetes网络插件的基础。其基本思想为：Container Runtime在创建容器时，先创建好network namespace，然后调用CNI插件为这个netns配置网络，其后再启动容器内的进程。  
 ###### CNI插件包括两部分：
 - CNI Plugin负责给容器配置网络，它包括两个基本的接口
   - **配置网络**: AddNetwork(net NetworkConfig, rt RuntimeConf) (types.Result, error)
   - **清理网络**: DelNetwork(net NetworkConfig, rt RuntimeConf) error
-- IPAM Plugin负责==给容器分配IP地址==，主要实现包括host-local和dhcp。
+- IPAM Plugin负责`给容器分配IP地址`，主要实现包括host-local和dhcp。
 
 ##### flannel
-Flannel通过给每台宿主机==分配一个子网==的方式为容器提供虚拟网络，它基于Linux TUN/TAP，使用==UDP==封装IP包来创建==overlay网络==，并借助==etcd==维护网络的分配情况。  
+Flannel通过给每台宿主机`分配一个子网`的方式为容器提供虚拟网络，它基于Linux TUN/TAP，使用`UDP`封装IP包来创建`overlay网络`，并借助`etcd`维护网络的分配情况。  
 主要解决一下两个问题  
 - 如果分配ip地址
 - 如何跨节点主机实现pod直接的互相通信
 
 首先第一点，如何分配ip地址。由于整个集群的信息都会存储在etcd上，所以自然关于每个node上的子网信息也从etcd获取，flannel便可根据etcd中的信息分配ip地址而不产生冲突，  
   
-实现在在不同node上的pod直接互通。首先明确fannel为nod之间维护一个Overlay(覆盖网络)网络来拼接成一个大网来实现互联的。网络拓补看下图
+实现在在不同node上的pod直接互通。首先明确fannel为node之间维护一个Overlay(覆盖网络)网络来拼接成一个大网来实现互联的。网络拓补看下图
 ![image](/chuil/img/k8s/07-22-5.png)
 ###### cni0
 可以简单的类比为docker0,他的作用和docker0差不多，都是一个网桥，而且端口连接着容器内的eth0，只是该cni0的网段是由falnnel分配的，如这里是10.244.0.0/24。可以在容器中和node中使用
-`ip addr ` 和 ` route ` 来查看路由表信息和设备信息。  
+`ip addr ` 和 `route` 来查看路由表信息和设备信息。  
  
- ###### flannel1
+###### flannel1
  这里就是整个网络通信的关键了，此时查看路由表信息，会看到10.244.1.0/24 对应的网关地址为10.244.1.0/24 设备为flannel.1，表示数据包交由给本机的flannel1设备，网关为目的node的flannel1，所以本机的flannel1在接收到这个数据包后会查询目的网关的mac地址。  
    
    这里就有区别于普通的查询方式，这里并不是使用arp协议去寻找，而是由linux kernel引发一个”L3 MISS”事件并将arp请求发到用户空间的flanned程序。flanned程序收到”L3 MISS”内核事件以及arp请求后，并不会向外网发送arp request，而是尝试从etcd查找该地址匹配的子网的vtep信息。可以使用
