--- a/_posts/spring/2021-02-01-spring 静态变量依赖注入问题.md
+++ b/_posts/spring/2021-02-01-spring 静态变量依赖注入问题.md
@@ -6,7 +6,7 @@ date:       2021-02-01
 author:     "CHuiL"
 header-img: "img/java-bg.png"
 tags:
-    - java
+    - spring
 ---
 
 将@Autowired注解作用在静态变量上时，不会编译错误，但是当我们调用他时会报NPE异常；
