--- a/_posts/spring/2021-02-01-spring 静态变量依赖注入问题.md
+++ b/_posts/spring/2021-02-01-spring 静态变量依赖注入问题.md
@@ -4,7 +4,7 @@ title:      "spring 静态变量依赖注入问题"
 subtitle:   "spring依赖注入"
 date:       2021-02-01
 author:     "CHuiL"
-header-img: "img/java-bg.png"
+header-img: "/img/bg/spring.jpg"
 tags:
     - spring
 ---
