--- a/_posts/spring/2021-02-01-spring 静态变量依赖注入问题.md
+++ b/_posts/spring/2021-02-01-spring 静态变量依赖注入问题.md
@@ -15,12 +15,12 @@ tags:
 
 
 
-因为类加载后静态变量成员是在内存的共享区，当类在加载静态变量时，spring还上下文还没加载，自然也就无法自动注入；(==这一段，似乎不能这么去看～==)
+因为类加载后静态变量成员是在内存的共享区，当类在加载静态变量时，spring还上下文还没加载，自然也就无法自动注入；(**这一段，似乎不能这么去看**)
 我们可以用构造函数的方法来实现静态变量的自动注入；当Spring扫描到该注解时，赋值给该静态变量；
 
 ![image](/chuil/img/spring/static-auto-2.png)
- ==构造方法不需要加Autowired注解的。 
-如果我的静态属性要设置的是它自己的单例实例，要怎么做呢？==
+ **构造方法不需要加Autowired注解的。** 
+**如果我的静态属性要设置的是它自己的单例实例，要怎么做呢？**
 
 
 
