--- a/_posts/java/2021-04-04-java nio.md
+++ b/_posts/java/2021-04-04-java nio.md
@@ -213,7 +213,7 @@ public static void copyFileByChannel(File source, File dest) throws
 > 阻塞模式
 一个SelectableChannel要么处于blocking mode，要么处于non-blocking mode。在阻塞模式下，在通道上调用的每个I/O操作都将阻塞，直到它完成。在非阻塞模式下，I/O操作永远不会阻塞，并且可能传输比请求的字节更少或根本没有字节。可选择通道的阻塞模式可以通过调用它的isBlocking方法来确定；新创建的SelectableChannel默认是blocking mode；在注册近selector之前必须设置为non-blocking mode；
 
-![image](DC280FFDD19A4CE488DEADE08004FEC9)
+![image](/chuil/img/java/nio-7.png)
 可以看到，常见的 DatagramChannel,SocketChannel,ServerSocketChannel都属于SelectableChannel
 
 
