--- a/_posts/java/2021-05-22-如何保证集合是线程安全的？.md
+++ b/_posts/java/2021-05-22-如何保证集合是线程安全的？.md
@@ -144,7 +144,7 @@ static class SynchronizedList<E>
 为什么需要 ConcurrentHashMap？ 
 > 因为HashTable和同步包装器都它只是使用synchronize进行很粗粒度的同步，性能低，一个线程操作，其他线程都要等待；
 
-![image](/chuil/img/java/jmm-1.png)
+![image](/chuil/img/java/chm-1.png)
 
 ##### get put的过程
 基于上面那张图，我们知道，其实就是多加了一层，使用Segment来分割HashEntry数组，这样我们就可以只锁住部分HashEntry，而不至于锁住所有；  
@@ -244,7 +244,7 @@ ConcurrentHashMap 的 get 方法是非常高效的，因为整个过程都不需
 > 那就是查询遍历链表效率太低。
 
 看下1.8中的存储结构图，发现与hashMpa差不多；
-![image](/chuil/img/java/jmm-2.png)
+![image](/chuil/img/java/chm-2.png)
 
 先看具体存储结构，已经没有1.7中的Segment了；
 ```
@@ -259,7 +259,7 @@ ConcurrentHashMap 的 get 方法是非常高效的，因为整个过程都不需
      */
     private transient volatile Node<K,V>[] nextTable;
 ```
-![image](/chuil/img/java/jmm-3.png)
+![image](/chuil/img/java/chm-3.png)
 Node中的value和key也同样使用了volatile来保证可见性；
 put方法
 ```
