--- a/_posts/消息队列/2021-07-18-kafka客户端生产者.md
+++ b/_posts/消息队列/2021-07-18-kafka客户端生产者.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "kafka客户端生产者
+title:      "kafka客户端生产者"
 subtitle:   ""
 date:       2021-07-18
 author:     "CHuiL"
